unpackaged/main/default/objects/dsfs__DocuSign_Status__c/fields/dsfs__EnvelopeConfiguration__c.field-meta.xml
<CustomField>
    <fullName>dsfs__EnvelopeConfiguration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DocuSign Envelope Configuration</label>
    <referenceTo>dsfs__EnvelopeConfiguration__c</referenceTo>
    <relationshipLabel>DocuSign Status</relationshipLabel>
    <relationshipName>DocuSign_Status</relationshipName>
    <type>Lookup</type>
</CustomField>