unpackaged/main/default/objects/dsfs__DocuSign_Status__c/fields/MSA_Contract__c.field-meta.xml
<CustomField>
    <fullName>MSA_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MSA Contract</label>
    <referenceTo>MSA_Contract__c</referenceTo>
    <relationshipLabel>DocuSign Status</relationshipLabel>
    <relationshipName>DocuSign_Status</relationshipName>
    <type>Lookup</type>
</CustomField>